[package]
name = "img2irc"
version = "1.0.4"
authors = ["waveplate"]
github = "https://github.com/waveplate/img2irc"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.14"
photon-rs = "0.3.2"
clap = { version = "4.2.0", features = ["cargo", "derive"] }
url = "2.3.1"
